# bayesian_bm25_rs

./: Cargo.toml  README.md  pyproject.toml
docs/: pyodide.md
src/: bayesian_scorer.rs  experiments.rs  hybrid_scorer.rs  lib.rs  main.rs  math_utils.rs  pybindings.rs  tokenizer.rs
