[package]
name = "bayesian_bm25"
version = "0.1.0"
edition = "2021"

[lib]
name = "bayesian_bm25"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "run_experiments"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.28", optional = true, features = ["extension-module"] }

[features]
python = ["pyo3"]
